# video-transribe

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: db.py  main.py  models.py  schemas.py  worker.py
backend/app/providers/: __init__.py  bailian_provider.py  formatter.py  openai_provider.py  oss_storage.py
docker/: .env.example  Dockerfile  docker-compose.yml  garage.toml.example  init-garage.sh  nginx.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/pages/: History.tsx
